--- a/device_drivers.html
+++ b/device_drivers.html
@@ -49,8 +49,21 @@
 --- VsD, VLM, VDD <br>
 <br>
 3. Open Drivers<br>
+--- Printers - CUPS <br>
+--- RAID - Compaq Command Interface for SCSI-3 Support (CCISS) <br>
+--- Scanner - SANE <br>
+--- Video - Vidix, Direct Rendering Infrastructure <br>
+--- Open Device drivers:- <br>
+== fas - Fast/wide SCSI controller<br>
+== hme - Fast Ethernet <br>
+== isp - Differential SCSI controllers and Sunswift card <br>
+== glm (Gigabaud Link Module) - UltraSCSI controllers <br>
+== scsi (Small Computer Serial Interface) devices <br>
+== sf - social Fiber Channel Arbitrated Loop (FCAL) <br>
+== soc - SPARC Storage Array (SSA) controllers and the Control device
+== social - Serial Optical Controllers for FCAL
 <br>
-4. APIs <br>
+4. APIs:- <br>
 --- Windows Display Driver Model (WDDM) <br>
 --- Windows Driver Foundation (WDF) <br>
 --- Windows Driver Model (WDM) <br>
@@ -63,7 +76,8 @@
 --- Uniform Driver Interface (UDI) <br>
 --- Dynax Driver Framework (dxd) <br>
 <br>
-4. Identifiers
+5. Identifiers:- <br>
+--- PCI bus
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
