--- a/device_drivers.html
+++ b/device_drivers.html
@@ -61,7 +61,7 @@
 == scsi (Small Computer Serial Interface) devices <br>
 == sf - social Fiber Channel Arbitrated Loop (FCAL) <br>
 == soc - SPARC Storage Array (SSA) controllers and the Control device
-== social - Serial Optical Controllers for FCAL
+== social - Serial Optical Controllers for FCAL <br>
 <br>
 4. APIs:- <br>
 --- Windows Display Driver Model (WDDM) <br>
