--- a/user_interface.html
+++ b/user_interface.html
@@ -32,7 +32,35 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>User Interface</h3>
 <p>
-Add something...
+User interface (UI) is termed as the interaction between humans and machines. <br>
+The common goal of UI is to provide "user-friendliness". <br>
+Some UI types:- <br>
+--- Direct Manipulation Interface <br>
+--- Graphical User Interface (GUI) <br>
+--- Web-based user interface or Web User Interface (WUI) <br>
+--- Touch Screens <br>
+--- Command Line Interface <br>
+--- Touch User Interface <br>
+--- Hardware interface <br>
+--- Attentive User Interface <br>
+--- Batch Interface <br>
+--- Conversational interface agents <br>
+--- Crossing-based interface <br>
+--- Gesture interface <br>
+--- Intelligent user interface <br>
+--- Motion tracking interface <br>
+--- Multi-screen interface <br>
+--- Non-command user interface <br>
+--- Object-Oriented User Interface (OOUI) <br>
+--- Reflexive user interface <br>
+--- Search interface <br>
+--- Tangible user interface <br>
+--- Task-focused interface <br>
+--- Text-based user interface <br>
+--- Voice user interface <br>
+--- Natural language interface <br>
+--- Zero input interface <br>
+--- Zooming user interface
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
