--- a/network_structure.html
+++ b/network_structure.html
@@ -32,7 +32,15 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Network Structure</h3>
 <p>
-Add something...
+<b>1. Network Layout</b> <br>
+--- Bus network <br>
+--- Star network <br>
+--- Ring network <br>
+--- Mesh network <br>
+--- Fully connected network <br>
+--- Tree network <br>
+<b>2. Overlay network</b> <br>
+--- Peer-To-Peer
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
