--- a/networking_types.html
+++ b/networking_types.html
@@ -32,7 +32,18 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networking Types</h3>
 <p>
-Add something...
+1. Nanoscale Network <br>
+2. Personal Area Network <br>
+3. Local Area Network <br>
+4. Home Area Network <br>
+5. Storage Area Network <br>
+6. Campus Area Network <br>
+7. Backbone Network <br>
+8. Metropolitan Area Network <br>
+9. Wide Area Network <br>
+10. Enterprise Private Network <br>
+11. Virtual Private Network <br>
+12. Global Area Network
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
