--- a/network_technologies.html
+++ b/network_technologies.html
@@ -32,7 +32,19 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Network Technologies</h3>
 <p>
-Add something...
+<b>1. Wired Technologies </b><br>
+--- Coaxial Cable <br>
+--- ITU-G.hn <br>
+--- Twisted Pair <br>
+--- Optical Fiber <br>
+<b>2. Wireless Technologies </b><br>
+--- Terrestrial Microwave <br>
+--- Communication Satellites <br>
+--- Cellular and PCS Systems <br>
+--- Radio Spectrum Technology and Spread Spectrum Technology <br>
+--- Free-space Optical Communication <br>
+<b>3. Exotic Technologies </b><br>
+--- IP over Avian Carriers
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
