--- a/network_communication_protocols.html
+++ b/network_communication_protocols.html
@@ -32,7 +32,12 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Network Communication Protocols</h3>
 <p>
-Add something...
+1. IEEE 802 <br>
+2. Ethernet <br>
+3. Wireless LAN <br>
+4. Internet Protocol Suite <br>
+5. SONET/SDH <br>
+6. Asynchronous Transfer Mode
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
