--- a/ieee802.html
+++ b/ieee802.html
@@ -32,7 +32,38 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>IEEE 802</h3>
 <p>
-Add something...
+IEEE 802.1 => Bridging and Network Management <br>
+IEEE 802.2 => LLC [inactive]<br>
+IEEE 802.3 => Ethernet <br>
+IEEE 802.4 => Token bus [broke-up]<br>
+IEEE 802.5 => Definition of MAC Layer for a Token Ring [inactive] <br>
+IEEE 802.6 => MANs (DQDB) [broke-up] <br>
+IEEE 802.7 => Broadband LAN using Coaxial Cable [broke-up] <br>
+IEEE 802.8 => Fiber Optic TAG [broke-up] <br>
+IEEE 802.9 => Integrated Services LAN [broke-up] <br>
+IEEE 802.10 => Interoperable LAN Security [broke-up] <br>
+IEEE 802.11 => Wireless LAN (WLAN) and Mesh (Wi-Fi certified) <br>
+IEEE 802.12 => 100BaseVG [broke-up] <br>
+IEEE 802.13 => Unused (Reserved for Fast Ethernet development) <br>
+IEEE 802.14 => Cable Modems [broke-up] <br>
+IEEE 802.15 => Wireless PAN <br>
+IEEE 802.15.1 => Bluetooth certification <br>
+IEEE 802.15.2 => IEEE 802.15 and IEEE 802.11 <br>
+IEEE 802.15.3 => High-rate wireless PAN <br>
+IEEE 802.15.4 => Low-rate wireless PAN <br>
+IEEE 802.15.5 => Mesh networking for WPAN <br>
+IEEE 802.15.6 => Body Area Network <br>
+IEEE 802.16 => Broadband Wireless Access (WiMAX certification) <br>
+IEEE 802.16.1 => Local Multipoint Distribution Service <br>
+IEEE 802.17 => Resilient Packet Ring <br>
+IEEE 802.18 => Radio Regulatory TAG <br>
+IEEE 802.19 => Coexistence TAG <br>
+IEEE 802.20 => Mobile Broadband Wireless Access <br>
+IEEE 802.21 => Media Independent Handoff <br>
+IEEE 802.22 => Wireless Regional Area Network <br>
+IEEE 802.23 => Emergency Services Working group<br>
+IEEE 802.24 => Smart Grid TAG <br>
+IEEE 802.25 => Omni-Range Area Network
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
