--- a/network_communication_protocols.html
+++ b/network_communication_protocols.html
@@ -32,7 +32,7 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Network Communication Protocols</h3>
 <p>
-1. IEEE 802 <br>
+1. <a href="http://ashumeow.github.io/ashumeow/ieee802.html">IEEE 802</a> <br>
 2. Ethernet <br>
 3. Wireless LAN <br>
 4. Internet Protocol Suite <br>
