--- a/cloud_service_models.html
+++ b/cloud_service_models.html
@@ -32,7 +32,10 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cloud - Service Models</h3>
 <p>
-Add something...
+1. IaaS <br>
+2. PaaS <br>
+3. SaaS <br>
+4. NaaS
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
