--- a/network_perf_optimize.html
+++ b/network_perf_optimize.html
@@ -32,7 +32,24 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Network Performance and Optimization</h3>
 <p>
-Add something...
+1. Quality of Service (QoS) <br>
+Some parameters... <br>
+--- Throughput <br>
+--- Jitter <br>
+--- Bit Error Rate <br>
+--- Latency <br>
+2. Network Congestion <br>
+Some effects... <br>
+--- Queuing delay <br>
+--- Packet Loss <br>
+--- Blocking of new connections <br>
+Some techniques... <br>
+--- Congestion Control <br>
+--- Congestion Avoidance <br>
+3. Network Resilience <br>
+4. Network Security <br>
+--- Network Surveillance <br>
+--- End-To-End Encryption 
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
