--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ Operating System <br>
 <a id="www" class="anchor" href="#www" aria-hidden="true"><span class="octicon octicon-link"></span></a>WWW (World Wide Web)</h3>
 <p>
 <b>Requirements</b> <br>
-[1] Computer System <br>
-[2] Networking hardware <br>
+[1] Computer System [<a href="http://ashumeow.github.io/ashumeow/hardware_basics.html">a</a>] [<a href="http://ashumeow.github.io/ashumeow/hardware_internals.html">b</a>] <br>
+[2] <a href="http://ashumeow.github.io/ashumeow/hardware_networking_basics.html">Networking hardware</a> <br>
 [3] <a href="http://ashumeow.github.io/ashumeow/network_communication_protocols.html">Network Communication protocols</a> <br>
 <b>Implementing the WWW </b> <br>
 [1] Web Client <br>
@@ -94,8 +94,6 @@ Content-Type: text/html; charset=UTF-8
 <p>
 <b>----- Getting Started -----</b> <br>
 [1] <a href="http://ashumeow.github.io/ashumeow/server_basics.html">Server basics </a><br>
-[2] <br>
-[3] <br>
 <b>----- Server Types -----</b> <br>
 [1] <a href="http://ashumeow.github.io/ashumeow/application_server.html">Application server </a>  <br>
 [2] <a href="http://ashumeow.github.io/ashumeow/catalog_server.html">Catalog server </a> <br>
