add cloud contents

--- a/cloud_basics.html
+++ b/cloud_basics.html
@@ -32,7 +32,22 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cloud - Basics</h3>
 <p>
-Add something...
+Everywhere at present, All we hear is "cloud". <br>
+But, Cloud can't be the future. Yet, Cloud can extend or provide a pathway towards the future. <br>
+Cloud is seen more like a "stack" connected to systems with the help of networks, where data is stored in Servers. <br>
+Learning about Cloud like a crazy freak since 2011... In early 2013, Someone (not-experienced in networks) asked "What is Cloud? and How could it be different from Servers?" <br>
+That was really tough to answer... In 2 years, that one question broke me.. <br>
+Answer isn't tough because now it's 2015 and i know the answer. <br>
+Like already said that Cloud is more like "stack", where stack serves in the form of "infrastructure", "platform" or "software". <br>
+Normal servers provides as a platform for hosting services such as webpages, where data is being stored in databases. <br>
+For list of servers --> <a href="http://ashumeow.github.io/ashumeow/server_basics.html">click here</a> <br>
+When it comes to cloud, it is the combination of those servers where it also has a dedicated server and also, a datacenter for each region. <br>
+With the help of cloud technology, the predictive modelling where the set of predictions with the help of predictive analysis known as machine learning is done. <br> This cool mechanism is also known as big data analytics. <br>
+Then, cloud server also used as a storage purpose (similar to normal web servers), but it has got it's own dedicated server as a plus. <br>
+Also, cloud application deployment is being performed with the help of a built-in command line interface with languages known as Cloud SDK (Software Development Kit). The success of deployment of applications results in hosting the application on cloud. <br>
+The cloud computing concept is more similar to grid computing, where grid computing is a kind of distributed/parallel computing that is formed by a cluster of networks. <br>
+Look like I have answered my question and also, added some more too. <br>
+That's how current cloud technology looks like! ;)
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
