--- a/cloud_basics.html
+++ b/cloud_basics.html
@@ -42,7 +42,7 @@ Like already said that Cloud is more like "stack", where stack serves in the for
 Normal servers provides as a platform for hosting services such as webpages, where data is being stored in databases. <br>
 For list of servers --> <a href="http://ashumeow.github.io/ashumeow/server_basics.html">click here</a> <br>
 When it comes to cloud, it is the combination of those servers where it also has a dedicated server and also, a datacenter for each region. <br>
-With the help of cloud technology, the predictive modelling is processed through the set of predictions with the help of predictive analysis known as machine learning is done. <br> This cool mechanism is also known as big data analytics. <br>
+With the help of cloud technology, the predictive modelling is processed through the set of predictions with the help of predictive analysis known as machine learning that is being done. <br> This cool mechanism is also known as big data analytics. <br>
 Then, cloud server also used as a storage purpose (similar to normal web servers), but it has got it's own dedicated server as a plus. <br>
 Also, cloud application deployment is being performed with the help of a built-in command line interface with languages known as Cloud SDK (Software Development Kit). The success of deployment of applications thereby results in hosting the application on cloud. <br>
 The cloud computing concept is more similar to grid computing, where grid computing is a kind of distributed/parallel computing that is formed by a cluster of networks. <br>
